--- a/node-mongo-api/package.json
+++ b/node-mongo-api/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
